scolar-core/language-component-tool/src/test/resources/cocos/languageComponents/invalid/WFRSetNamesNotUnique.comp
package cocos.languageComponents.invalid;

language component WFRSetNamesNotUnique {

  grammar mc.lang.MontiArc;

  wfrs NoInnerComponents for Connector{
    mc.lang.montiarc.cocos.DefaultParametersHaveCorrectOrder;
    mc.lang.montiarc.cocos.ConnectorSourceAndTargetExistAndFit;
  }
  
  wfrs NoInnerComponents for Connector{
    mc.lang.montiarc.cocos.DefaultParametersHaveCorrectOrder;
    mc.lang.montiarc.cocos.ConnectorSourceAndTargetExistAndFit;
  }

}

